<resources>
    <string name="Additional_comments">Additional Comments</string>
    <string name="CartAlertMessage">Are you sure you want \n to delete</string>
    <string name="Division_Stream">Select Division/Stream *</string>
    <string name="ERR11">Network connectivity unavailable. Please check if your data connection is activated.</string>
    <string name="ERR12">SDK not initialized properly, unable to proceed.</string>
    <string name="ERR13">SDK not configured properly, unable to proceed.</string>
    <string name="ERR14">Please select an option to proceed!</string>
    <string name="ERR16">Technical Error [ERR16].</string>
    <string name="ERR17">Something is wrong, can\'t get the payment options.</string>
    <string name="ERR18">Something\'s wrong with the configuration!</string>
    <string name="ERR20">Invalid Card Number.</string>
    <string name="ERR21">Invalid CVV Number.</string>
    <string name="ERR22">Invalid Card Expiry Date.</string>
    <string name="ERR24">Please enter Card Holder\'s Name.</string>
    <string name="ERR25">Please select your nationality.</string>
    <string name="ERR26">Please enter a valid Email ID (eg anil_kotwal@yahoo.com)</string>
    <string name="ERR27">Please enter Contact No. (eg 9824555555)</string>
    <string name="ERR28">Please enter a valid first name as per your billing statement. (e.g. Akash)</string>
    <string name="ERR29">Please enter a valid last name as per your billing statement. (e.g. Mahendra)</string>
    <string name="ERR30">Please enter a valid address as per your billing statement. (e.g. A22, akash CHS, sector 42 nerul)</string>
    <string name="ERR31">Please enter a valid city as per your billing statement.(e.g. Mumbai)</string>
    <string name="ERR32">Please enter a valid state as per your billing statement. (e.g. Maharashtra)</string>
    <string name="ERR33">Please enter a valid pin code as per your billing statement. (e.g. 400031)</string>
    <string name="ERR34">Please select a valid Country (eg India)</string>
    <string name="ERR36">QuickPay list is not in proper format</string>
    <string name="ERR37">No Card Network added</string>
    <string name="ERR38">Card list not found.</string>
    <string name="ERR39">Got bank list empty</string>
    <string name="ERR40">Invalid Batch Code Number.</string>
    <string name="ERR43">This payment option is not enabled on current version of the app.</string>
    <string name="ERR44">PG request message is not in proper format.</string>
    <string name="ERR45">Please enter a valid middle name as per your billing statement. (e.g. Kumar)</string>
    <string name="ERR46">Unfortunately we can not process your request due to technical reasons</string>
    <string name="Invoice">Course Invoice</string>
    <string name="Pdf_view_detail">PDF feature is not enable at this moment</string>
    <string name="Present_class">Current Class *</string>
    <string name="Preview">Preview</string>
    <string name="Qclear">Clear</string>
    <string name="RANK">Rank</string>
    <string name="Retry_with_Internet_connection">Retry with Internet connection</string>
    <string name="Settings">Settings</string>
    <string name="Skill_india">Mukhya Mantri Yuva \n Sambal Yojna</string>
    <string name="Submitted">Test Submitted</string>
    <string name="Video_references">Video References</string>
    <string name="_0">0</string>
    <string name="_00_00">00:00</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="_0_done">0% Done</string>
    <string name="_0_points">0 Points</string>
    <string name="_1">1</string>
    <string name="_15_eligible_courses">15 Eligible Courses</string>
    <string name="_1_">1.</string>
    <string name="_200_inr_off">200 INR OFF</string>
    <string name="_days"> Days</string>
    <string name="_days_validity">Days Validity</string>
    <string name="_marked">Marked</string>
    <string name="a">A</string>
    <string name="aadhaar_number">Aadhaar Number *</string>
    <string name="aadhar_card">Aadhaar Card</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_us_text">About</string>
    <string name="accuracy">Accuracy</string>
    <string name="action_settings">Settings</string>
    <string name="activation">Activation</string>
    <string name="active_since">Active Since</string>
    <string name="add_address">Add Address</string>
    <string name="add_another_revision">Add another revision</string>
    <string name="add_bookmark">Add Bookmark</string>
    <string name="add_coupon">Add Promo</string>
    <string name="add_new_bookmark">Add New Bookmark</string>
    <string name="add_note_message">Add your selected text to saved on notes</string>
    <string name="add_photo">Add Photo!</string>
    <string name="add_plus">+Add</string>
    <string name="add_revision_title">Add Revision Title</string>
    <string name="add_title">Add Title</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="add_to_doc">Add To Doc</string>
    <string name="added">Added :</string>
    <string name="adding">Adding</string>
    <string name="adding_resources_will_work_only_when_you_are_online">Adding resources will work only when you are online.</string>
    <string name="adding_revisions_will_work_only_when_you_are_online">Adding revisions will work only when you are online.</string>
    <string name="adding_videos_will_work_only_when_you_are_online">Adding videos will work only when you are online.</string>
    <string name="address">Address</string>
    <string name="address_added">Address Added</string>
    <string name="address_field_is_required">Address field is required.</string>
    <string name="advance_filters">Advance Filters</string>
    <string name="agri">Agri</string>
    <string name="alert">Alert</string>
    <string name="alert_guest">Alert!!</string>
    <string name="alert_guest_msg">To buy this course, please login</string>
    <string name="alert_i">Alert !!</string>
    <string name="all_doubt">All Doubt</string>
    <string name="all_field_is_mandatory">All Field is Mandatory.</string>
    <string name="all_india_test_series">All India Test Series</string>
    <string name="all_question">All Questions</string>
    <string name="allcourses">All Courses</string>
    <string name="allow">Allow</string>
    <string name="alternate_mobile_number">Alternate Mobile Number</string>
    <string name="alternate_number">Alternate number</string>
    <string name="amount">Amount</string>
    <string name="an_update_has_just_been_downloaded">An update has just been downloaded.</string>
    <string name="androidx_compose_foundation_autofill">Autofill</string>
    <string name="androidx_compose_ui_autofill">Autofill</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="another_download_is_still_in_progress">Another download is still in progress.</string>
    <string name="answer_key">Answer Key</string>
    <string name="answered">Answered</string>
    <string name="answered_correct">Answered Correct</string>
    <string name="answered_qs">Answered Qs</string>
    <string name="appSettings">App Settings</string>
    <string name="app_download_cancelled">App download canceled.</string>
    <string name="app_download_failed">App download failed.</string>
    <string name="app_download_starts">App download starts...</string>
    <string name="app_name">EDUTERIA</string>
    <string name="app_version">App Version</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply">Apply</string>
    <string name="apply_a_coupon">Apply coupon?</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="are_you_agree_to_the_doubt">Are you agree ?</string>
    <string name="are_you_sure_you_want_to_cancel">Are you sure you want to delete</string>
    <string name="are_you_sure_you_want_to_course_delete">Are you sure you want to delete this course?</string>
    <string name="are_you_sure_you_want_to_delete_the_bookmark">Are you sure,You want to delete the Bookmark ?</string>
    <string name="are_you_sure_you_want_to_delete_the_free_course">Are you sure,You want to delete the free course ?</string>
    <string name="are_you_sure_you_want_to_delete_the_selected_audios">Are you sure,You want to delete the selected audios ?</string>
    <string name="are_you_sure_you_want_to_delete_the_selected_pdfs">Are you sure,You want to delete the selected pdfs ?</string>
    <string name="attempt_test">Attempt Test to compete at National Level</string>
    <string name="call_us">Call Us</string>
    <string name="cancel">Cancel</string>
    <string name="chat_with_customer_support">Chat with customer support</string>
    <string name="customer_support">Customer support is open from 10 AM to 5 PM</string>
    <string name="customer_support_chat">Customer Support Chat</string>
    <string name="delete">Delete</string>
    <string name="e_mail_us">E-mail Us</string>
    <string name="enter_title">Enter Title</string>
    <string name="feedback">Feedback</string>
    <string name="get_your_doubts_resolved">Get your Doubts Resolved</string>
    <string name="lable">Lable</string>
    <string name="log_in">Log In</string>
    <string name="mail_to_customer_support">Mail to customer support</string>
    <string name="my_feedback">My Feedback</string>
    <string name="pin">Pin</string>
    <string name="please_rate_your_experience">Please rate your experience</string>
    <string name="sign_in_with_new_password">Sign in with new password</string>
    <string name="submit">Submit</string>
    <string name="submit_feedback">Submit feedback</string>
    <string name="support">Support</string>
    <string name="talk_with_customer_support">Talk with customer support</string>
    <string name="time_00_35_20">Time 00:35:20</string>
    <string name="write_feedback">Write Feedback</string>
    <string name="your_password_has_been_reset">Your password has been reset</string>
</resources>