<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#ffffffff"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textSize="@dimen/dp20"
        android:textColor="@color/colorWhite"
        android:id="@+id/a"
        android:padding="7dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:scaleType="fitCenter"
        android:text="@string/add_bookmark"/>
    <TextView
        android:textSize="18sp"
        android:textColor="#ff000000"
        android:id="@+id/text_dialog_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/time_00_35_20"
        android:layout_below="@+id/a"
        android:layout_centerHorizontal="true"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tittle_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/text_dialog_time">
        <EditText
            android:textSize="16sp"
            android:textColorHint="#000000"
            android:id="@+id/nameTV"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:hint="@string/enter_title"
            android:maxLength="40"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="@dimen/dp20"
        android:layout_below="@+id/tittle_name">
        <Button
            android:textSize="@dimen/small_text_size"
            android:textColor="@color/gray"
            android:id="@+id/btn_dialog_cancel"
            android:background="@color/white"
            android:paddingLeft="@dimen/dp20"
            android:paddingRight="@dimen/dp20"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp40"
            android:text="@string/cancel"
            android:layout_toLeftOf="@+id/btn_dialog_submit"
            style="@style/DemoButton"/>
        <Button
            android:textSize="@dimen/small_text_size"
            android:textColor="@color/commonBtnTextColor"
            android:id="@+id/btn_dialog_submit"
            android:background="@drawable/common_round_corners_button_drawable"
            android:paddingLeft="@dimen/dp20"
            android:paddingRight="@dimen/dp20"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp40"
            android:text="@string/submit"
            android:layout_alignParentEnd="true"
            style="@style/DemoButton"/>
    </RelativeLayout>
</RelativeLayout>
