<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@color/common_btn_gradient_end_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp5">
        <TextView
            android:textSize="@dimen/heading_text_size"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:layout_gravity="center"
            android:id="@+id/titleDialog"
            android:padding="@dimen/dp5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/support"
            android:fontFamily="@font/inter_bold"
            android:layout_marginStart="@dimen/dp10"
            android:layout_marginEnd="@dimen/dp10"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@+id/bottomSheetBtnCall"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:foreground="?attr/selectableItemBackground"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="32dp"
            app:srcCompat="@drawable/ic_call_dark_24dp"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="20sp"
                android:textColor="@color/colorActionBarText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call_us"/>
            <TextView
                android:textSize="14sp"
                android:textColor="#737373"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/talk_with_customer_support"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:background="#8c444444"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="56dp"/>
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@+id/bottomSheetBtnEmail"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackground"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="32dp"
            app:srcCompat="@drawable/ic_email_dark_24dp"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="20sp"
                android:textColor="@color/colorActionBarText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/e_mail_us"/>
            <TextView
                android:textSize="14sp"
                android:textColor="#737373"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mail_to_customer_support"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:background="#8c444444"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="56dp"/>
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@+id/bottomSheetBtnChat"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:visibility="gone"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackground"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="32dp"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="20sp"
                android:textColor="@color/colorActionBarText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_support_chat"/>
            <TextView
                android:textSize="14sp"
                android:textColor="#737373"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chat_with_customer_support"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:textSize="12sp"
        android:typeface="normal"
        android:textColor="#8c444444"
        android:gravity="center"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/customer_support"/>
</LinearLayout>
