<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/intro3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="5">
    <androidx.legacy.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"/>
    <ImageView
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="0x7f080464"/>
    <androidx.legacy.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/default_pic"/>
    <androidx.legacy.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <TextView
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_your_doubts_resolved"/>
    <TextView
        android:textSize="@dimen/heading_text_size"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_india_test_series"/>
    <TextView
        android:textSize="@dimen/small_text_size"
        android:textColor="#ffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp5"
        android:text="@string/attempt_test"/>
    <androidx.legacy.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>
</LinearLayout>
