<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="50dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/changeDialogIV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/password_reset_succesful"/>
        <TextView
            android:textSize="16sp"
            android:textColor="#000000"
            android:id="@+id/passwordResetTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/your_password_has_been_reset"
            android:layout_below="@+id/changeDialogIV"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:textSize="14sp"
            android:textColor="#232f3e"
            android:id="@+id/signInWithNewTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/sign_in_with_new_password"
            android:layout_below="@+id/passwordResetTV"
            android:layout_centerHorizontal="true"/>
        <Button
            android:textColor="@color/commonBtnTextColor"
            android:id="@+id/btnSubmit"
            android:background="@drawable/common_round_corners_button_drawable"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/log_in"
            android:includeFontPadding="false"
            android:layout_below="@+id/signInWithNewTV"
            android:layout_centerHorizontal="true"
            android:textAllCaps="false"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>
