<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/ibt_quiz_bg_blue_border"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textSize="@dimen/sp16"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:id="@+id/tvLable"
        android:background="?attr/selectableItemBackground"
        android:padding="@dimen/dp15"
        android:visibility="gone"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lable"/>
    <View
        android:background="@color/gray_light"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:layout_marginStart="@dimen/dp10"
        android:layout_marginEnd="@dimen/dp10"/>
    <TextView
        android:textSize="@dimen/sp16"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:id="@+id/tvPin"
        android:background="?attr/selectableItemBackground"
        android:padding="@dimen/dp15"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pin"/>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/llDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:background="@color/gray_light"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:layout_marginStart="@dimen/dp10"
            android:layout_marginEnd="@dimen/dp10"/>
        <TextView
            android:textSize="@dimen/sp16"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:id="@+id/tvDelete"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/dp15"
            android:visibility="visible"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete"/>
    </LinearLayout>
</LinearLayout>
