<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:tag="layout/rating_dialog_0"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_gravity="end"
        android:id="@+id/closeButton"
        android:tag="binding_1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@mipmap/download_delete"
        android:contentDescription="Close"
        android:layout_marginEnd="@dimen/dp12"
        app:tint="@color/white"/>
    <androidx.core.widget.NestedScrollView
        android:background="@drawable/video_round_corner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp8"
        android:fillViewport="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="#1f2937"
                android:gravity="center"
                android:id="@+id/tvFeedbackTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp28"
                android:text="@string/feedback"/>
            <TextView
                android:textSize="16sp"
                android:textColor="#4b5563"
                android:gravity="center"
                android:id="@+id/tvSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/please_rate_your_experience"/>
            <RatingBar
                android:theme="@style/RatingBarNew"
                android:layout_gravity="center"
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:numStars="5"
                android:stepSize="1"
                android:scaleX="0.8"
                android:scaleY="0.8"
                android:progressBackgroundTint="@color/rating_inactive"/>
            <TextView
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black_text_color"
                android:id="@+id/tvWriteFeedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp12"
                android:text="@string/write_feedback"
                android:layout_marginStart="@dimen/dp24"/>
            <RelativeLayout
                android:orientation="horizontal"
                android:id="@+id/subject1"
                android:background="@drawable/round_corner_border_advacefilter"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginHorizontal="@dimen/dp24"
                android:paddingVertical="@dimen/dp8">
                <EditText
                    android:textSize="@dimen/post_text_size_x"
                    android:gravity="start"
                    android:id="@+id/ratingComment"
                    android:background="@null"
                    android:paddingBottom="@dimen/dp20"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/dp4"
                    android:hint="@string/my_feedback"
                    android:maxLength="300"
                    android:digits=" -+)(*^%$#@!~`/?=|:;ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
                    android:inputType="textMultiLine"
                    android:fontFamily="@font/amazon_ember_rg"
                    android:paddingStart="@dimen/dp5"/>
            </RelativeLayout>
            <Button
                android:textSize="@dimen/sp18"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:id="@+id/submitRating"
                android:tag="binding_2"
                android:background="@drawable/buy_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginBottom="@dimen/dp12"
                android:text="@string/submit_feedback"
                android:textAllCaps="false"
                android:layout_marginHorizontal="@dimen/dp24"
                app:backgroundTint="@color/colorPrimary"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
